--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": ">=5.4",
         "symfony/framework-bundle": "2.6.*",
-        "twig/twig": "~1"
+        "twig/twig": "~1",
+        "dontdrinkandroot/utils": "0.2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1"
