Renaming to utils-bundle

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,6 +1,6 @@
 services:
     ddr.twig.bootstrap.pagination_extension:
-        class: Dontdrinkandroot\DontdrinkandrootBundle\Twig\BootstrapPaginationExtension
+        class: Dontdrinkandroot\UtilsBundle\Twig\BootstrapPaginationExtension
         arguments: ["@router"]
         tags:
             - { name: twig.extension }
