Setting AutoIntegerIdEntity bigint id by default

--- a/Resources/config/doctrine/AutoIntegerIdEntity.orm.yml
+++ b/Resources/config/doctrine/AutoIntegerIdEntity.orm.yml
@@ -2,7 +2,7 @@ Dontdrinkandroot\UtilsBundle\Entity\AutoIntegerIdEntity:
     type: mappedSuperclass
     id:
         id:
-            type: integer
+            type: bigint
             id: true
             generator:
                 strategy: AUTO
