--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=5.4",
-        "symfony/framework-bundle": "2.6.*",
+        "symfony/framework-bundle": "~2.6",
         "twig/twig": "~1",
         "dontdrinkandroot/utils": "0.2.6"
     },
