--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": ">=5.4",
         "symfony/framework-bundle": "~2.6",
         "twig/twig": "~1",
-        "dontdrinkandroot/utils": "0.2.*, >=0.2.6"
+        "dontdrinkandroot/utils": "0.3.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1"
