UUID must of course be unique

--- a/Resources/config/doctrine/UuidEntity.orm.yml
+++ b/Resources/config/doctrine/UuidEntity.orm.yml
@@ -4,3 +4,4 @@ Dontdrinkandroot\UtilsBundle\Entity\UuidEntity:
         uuid:
             type: guid
             nullable: false
+            unique: true
