Adding uuid index

--- a/Resources/config/doctrine/UuidEntity.orm.yml
+++ b/Resources/config/doctrine/UuidEntity.orm.yml
@@ -1,5 +1,9 @@
 Dontdrinkandroot\UtilsBundle\Entity\UuidEntity:
     type: mappedSuperclass
+    indexes:
+        uuidIdx:
+            columns:
+                - uuid
     fields:
         uuid:
             type: guid
