--- a/composer.json
+++ b/composer.json
@@ -11,17 +11,21 @@
     ],
     "require": {
         "php": ">=5.5",
-        "symfony/framework-bundle": "~2.6",
-        "twig/twig": "~1",
+        "symfony/symfony": "~2.7",
         "dontdrinkandroot/utils": "^0.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.1"
+        "phpunit/phpunit": "~4.1",
+        "doctrine/orm": "~2.5",
+        "doctrine/data-fixtures": "^1.1"
     },
     "autoload": {
         "psr-4": {
             "Dontdrinkandroot\\UtilsBundle\\": ""
         }
+    },
+    "suggest": {
+        "doctrine/data-fixtures": "For data fixture testing"
     },
     "extra": {
         "branch-alias": {
