Adding Tests and Travis

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         {
             "name": "Philip Washington Sorst",
             "email": "philip@sorst.net",
-            "homepage": "http://sorst.net"
+            "homepage": "https://sorst.net"
         }
     ],
     "require": {
