--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.5",
         "symfony/symfony": "~2.7",
-        "dontdrinkandroot/utils": "^0.4.0"
+        "dontdrinkandroot/utils": "0.4.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1",
@@ -25,15 +25,10 @@
         }
     },
     "suggest": {
-        "doctrine/data-fixtures": "For data fixture testing",
-        "graphp/graphviz": "For rendering Entity Relationship diagrams"
+        "doctrine/data-fixtures": "For data fixture testing"
     },
     "bin": [
-        "bin/install",
-        "bin/update",
-        "bin/maintenance.off",
-        "bin/maintenance.on",
-        "bin/set-permissions"
+        "bin/setup"
     ],
     "extra": {
         "branch-alias": {
