--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "dontdrinkandroot/utils-bundle",
+    "description": "Symfony extension bundle",
     "type": "symfony-bundle",
     "license": "Apache-2.0",
     "authors": [
@@ -12,7 +13,7 @@
     "require": {
         "php": ">=5.5",
         "symfony/symfony": "~2.7",
-        "dontdrinkandroot/utils": "0.4.x-dev"
+        "dontdrinkandroot/utils": "0.5.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.1",
@@ -32,7 +33,7 @@
     ],
     "extra": {
         "branch-alias": {
-            "dev-master": "0.2.x-dev"
+            "dev-master": "0.3.x-dev"
         }
     }
 }
