--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,29 @@
 language: php
 
-php:
-  - 5.5
-  - 5.6
+sudo: false
+
+matrix:
+  include:
+    - php: 5.5
+      env: dependencies=lowest
+    - php: 5.6
+      env: dependencies=lowest
+    - php: 5.5
+      env: dependencies=highest
+    - php: 5.6
+      env: dependencies=highest
+
+cache:
+  directories:
+    - $HOME/.composer/cache
 
 before_script:
+  - composer self-update -q
+  - if [ -n "$GH_TOKEN" ]; then composer config github-oauth.github.com ${GH_TOKEN}; fi;
+  - if [ -z "$dependencies" ]; then composer install; fi;
+  - if [ "$dependencies" = "lowest" ]; then composer update --prefer-lowest -n; fi;
+  - if [ "$dependencies" = "highest" ]; then composer update -n; fi;
   - composer install
 
 script:
-  ./vendor/phpunit/phpunit/phpunit -c ./ --testsuite "Unit Tests" && ./vendor/phpunit/phpunit/phpunit -c ./ --testsuite "Integration Tests" && ./vendor/phpunit/phpunit/phpunit -c ./ --testsuite "Acceptance Tests"
+    - (export SYMFONY_DEPRECATIONS_HELPER="weak" && vendor/bin/phpunit)
