--- a/.travis.yml
+++ b/.travis.yml
@@ -3,27 +3,37 @@ language: php
 sudo: false
 
 matrix:
-  include:
-    - php: 5.5
-      env: dependencies=lowest
-    - php: 5.6
-      env: dependencies=lowest
-    - php: 5.5
-      env: dependencies=highest
-    - php: 5.6
-      env: dependencies=highest
+    include:
+        -
+            php: 5.5
+            env: dependencies=lowest
+        -
+            php: 5.5
+            env: dependencies=highest
+        -
+            php: 5.6
+            env: dependencies=lowest
+        -
+            php: 5.6
+            env: dependencies=highest
+        -
+            php: 7.0
+            env: dependencies=lowest
+        -
+            php: 7.0
+            env: dependencies=highest
 
 cache:
-  directories:
-    - $HOME/.composer/cache
+    directories:
+        - $HOME/.composer/cache
 
 before_script:
-  - composer self-update -q
-  - if [ -n "$GH_TOKEN" ]; then composer config github-oauth.github.com ${GH_TOKEN}; fi;
-  - if [ -z "$dependencies" ]; then composer install; fi;
-  - if [ "$dependencies" = "lowest" ]; then composer update --prefer-lowest -n; fi;
-  - if [ "$dependencies" = "highest" ]; then composer update -n; fi;
-  - composer install
+    - composer self-update -q
+    - if [ -n "$GH_TOKEN" ]; then composer config github-oauth.github.com ${GH_TOKEN}; fi;
+    - if [ -z "$dependencies" ]; then composer install; fi;
+    - if [ "$dependencies" = "lowest" ]; then composer update --prefer-lowest -n; fi;
+    - if [ "$dependencies" = "highest" ]; then composer update -n; fi;
+    - composer install
 
 script:
     - (export SYMFONY_DEPRECATIONS_HELPER="weak" && vendor/bin/phpunit)
