--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,13 @@
     ],
     "require": {
         "php": ">=7.1",
-        "symfony/symfony": "^2.7|^3.0",
+        "symfony/symfony": "^3.0|^4.0",
         "dontdrinkandroot/utils": "0.5.x-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.1",
-        "doctrine/data-fixtures": "^1.1"
+        "phpunit/phpunit": "^5.0",
+        "doctrine/data-fixtures": "^1.1",
+        "twig/twig": "^2.0"
     },
     "autoload": {
         "psr-4": {
