--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,14 @@
     ],
     "require": {
         "php": ">=7.1",
-        "symfony/symfony": "^3.0|^4.0",
+        "symfony/framework-bundle": "^3.4|^4.0",
+        "symfony/console": "^3.4|^4.0",
+        "symfony/form": "^3.4|^4.0",
+        "twig/twig": "^2.0",
         "dontdrinkandroot/utils": "0.5.x-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0",
-        "doctrine/data-fixtures": "^1.1",
-        "twig/twig": "^2.0"
+        "phpunit/phpunit": "^5.0"
     },
     "autoload": {
         "psr-4": {
